Name:               xmonad-utils
Version:            0.1.3.2
License:            BSD3
License-file:       LICENSE
Author:             Andrea Rossato
Maintainer:         <abimelech@gmail.com>

Stability:          experimental
Category:           System
Synopsis:           A small collection of X utilities
Description:        A small collection of X utilities useful when
                    running XMonad. It includes:
                    .
                    * hxsel, which returns the text currently in the X selection;
                    .
                    * hslock, a simple X screen lock;
                    .
                    * hmanage: an utility to toggle the override-redirect property of any
                    window;
                    .
                    * and hhp, a simple utility to hide the pointer, similar
                    to unclutter.
Homepage:           http://www.haskell.org/haskellwiki/Xmonad-utils

Build-type:         Simple
Cabal-version:      >=1.6
tested-with:        GHC>=7.4.2

Executable hhp
  Build-depends:      base<5, X11>=1.3, ghc>=6.8, unix, random>=1.0
  Main-is:            Hhp.hs
  Other-Modules:      Utils
  hs-source-dirs:     src
  ghc-options:        -funbox-strict-fields -Wall
  ghc-prof-options:   -prof -auto-all

source-repository head
  type: git
  location: https://github.com/LeifW/xmonad-utils.git
